remove sonar job and test job

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -76,37 +76,37 @@ jobs:
         path: src/ProbotMetrics
 
 
-  test:
-    runs-on: windows-latest
-    permissions:
-      actions: read 
-    steps:
-    - uses: actions/checkout@v3
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: 7.0.x
-    #Run automated .NET tests   
-    - name: Variable Substitution appsettings file for tests
-      uses: microsoft/variable-substitution@v1
-      with:
-        files: 'src/DevOpsMetrics.Tests/appsettings.json'
-      env:
-        AppSettings.AzureDevOpsPatToken: "${{ secrets.AzureDevOpsPATToken }}"
-        AppSettings.GitHubClientId: "${{ secrets.GitHubClientId }}" 
-        AppSettings.GitHubClientSecret: "${{ secrets.GitHubClientSecret }}" 
-        AppSettings.AzureStorageAccountConfigurationString: "${{ secrets.AzureStorageConnectionString }}" 
-        AppSettings.KeyVaultClientId: "${{ secrets.KeyVaultClientId }}" 
-        AppSettings.KeyVaultClientSecret: "${{ secrets.KeyVaultClientSecret }}" 
-    - name: build test project
-      run: dotnet build src/DevOpsMetrics.Tests/DevOpsMetrics.Tests.csproj --configuration Debug
-    - name: Run automated unit and integration tests
-      run: dotnet test src/DevOpsMetrics.Tests/DevOpsMetrics.Tests.csproj --no-build --configuration Debug --logger trx -e:CollectCoverage=true -e:CoverletOutput=TestResults/ -e:CoverletOutputFormat=lcov --settings:./src/DevOpsMetrics.Tests/CodeCoverage.runsettings 
-    - name: Publish coverage report to coveralls.io
-      uses: coverallsapp/github-action@master
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: src/DevOpsMetrics.Tests/TestResults/coverage.info 
+  #test:
+  #  runs-on: windows-latest
+  #  permissions:
+  #    actions: read 
+  #  steps:
+  #  - uses: actions/checkout@v3
+  #  - name: Setup .NET Core
+  #    uses: actions/setup-dotnet@v3
+  #    with:
+  #      dotnet-version: 7.0.x
+  #  #Run automated .NET tests   
+  #  - name: Variable Substitution appsettings file for tests
+  #    uses: microsoft/variable-substitution@v1
+  #    with:
+  #      files: 'src/DevOpsMetrics.Tests/appsettings.json'
+  #    env:
+  #      AppSettings.AzureDevOpsPatToken: "${{ secrets.AzureDevOpsPATToken }}"
+  #      AppSettings.GitHubClientId: "${{ secrets.GitHubClientId }}" 
+  #      AppSettings.GitHubClientSecret: "${{ secrets.GitHubClientSecret }}" 
+  #      AppSettings.AzureStorageAccountConfigurationString: "${{ secrets.AzureStorageConnectionString }}" 
+  #      AppSettings.KeyVaultClientId: "${{ secrets.KeyVaultClientId }}" 
+  #      AppSettings.KeyVaultClientSecret: "${{ secrets.KeyVaultClientSecret }}" 
+  #  - name: build test project
+  #    run: dotnet build src/DevOpsMetrics.Tests/DevOpsMetrics.Tests.csproj --configuration Debug
+  #  - name: Run automated unit and integration tests
+  #    run: dotnet test src/DevOpsMetrics.Tests/DevOpsMetrics.Tests.csproj --no-build --configuration Debug --logger trx -e:CollectCoverage=true -e:CoverletOutput=TestResults/ -e:CoverletOutputFormat=lcov --settings:./src/DevOpsMetrics.Tests/CodeCoverage.runsettings 
+  #  - name: Publish coverage report to coveralls.io
+  #    uses: coverallsapp/github-action@master
+  #    with:
+  #      github-token: ${{ secrets.GITHUB_TOKEN }}
+  #      path-to-lcov: src/DevOpsMetrics.Tests/TestResults/coverage.info 
 
 
   buildFunction:
@@ -126,19 +126,19 @@ jobs:
         path: ${{ github.workspace }}/function
 
 
-  sonarCloud:
-    name: Run SonarCloud analysis
-    runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' 
-    steps:
-      - name: Run Sonarcloud test
-        uses: samsmithnz/SamsDotNetSonarCloudAction@1.2.0
-        with:
-          projects: 'src/DevOpsMetrics.Core/DevOpsMetrics.Core.csproj,src/DevOpsMetrics.Function/DevOpsMetrics.Function.csproj,src/DevOpsMetrics.FunctionalTests/DevOpsMetrics.FunctionalTests.csproj,src/DevOpsMetrics.Service/DevOpsMetrics.Service.csproj,src/DevOpsMetrics.Tests/DevOpsMetrics.Tests.csproj,src/DevOpsMetrics.Web/DevOpsMetrics.Web.csproj,src/DevOpsMetrics.Cmd/DevOpsMetrics.Cmd.csproj'
-          dotnet-version: '7.0.x'
-          sonarcloud-organization: samsmithnz-github
-          sonarcloud-project: samsmithnz_DevOpsMetrics
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #sonarCloud:
+  #  name: Run SonarCloud analysis
+  #  runs-on: ubuntu-latest
+  #  if: github.ref == 'refs/heads/main' 
+  #  steps:
+  #    - name: Run Sonarcloud test
+  #      uses: samsmithnz/SamsDotNetSonarCloudAction@1.2.0
+  #      with:
+  #        projects: 'src/DevOpsMetrics.Core/DevOpsMetrics.Core.csproj,src/DevOpsMetrics.Function/DevOpsMetrics.Function.csproj,src/DevOpsMetrics.FunctionalTests/DevOpsMetrics.FunctionalTests.csproj,src/DevOpsMetrics.Service/DevOpsMetrics.Service.csproj,src/DevOpsMetrics.Tests/DevOpsMetrics.Tests.csproj,src/DevOpsMetrics.Web/DevOpsMetrics.Web.csproj,src/DevOpsMetrics.Cmd/DevOpsMetrics.Cmd.csproj'
+  #        dotnet-version: '7.0.x'
+  #        sonarcloud-organization: samsmithnz-github
+  #        sonarcloud-project: samsmithnz_DevOpsMetrics
+  #        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           
 
   #Disabling PROBOT for 2021 reboot to focus on website
